--- a/SIstemas Operacionais/PPOS/CMakeLists.txt
+++ b/SIstemas Operacionais/PPOS/CMakeLists.txt
@@ -28,8 +28,9 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 # Tests:
 #P1: test/queue_test.c source/queue.c
 #P2: test/pingpong-tasks1.c source/ppos-core.c | test/pingpong-tasks2.c source/ppos-core.c | test/pingpong-tasks3.c source/ppos-core.c
+#P3: test/pingpong-dispatcher.c source/ppos-core.c
 
-set(SOURCE_FILES test/pingpong-tasks1.c source/ppos-core.c)
+set(SOURCE_FILES test/pingpong-tasks3.c source/ppos-core.c)
 
 add_executable(PPOS ${SOURCE_FILES})
 
