--- a/SIstemas Operacionais/PPOS/CMakeLists.txt
+++ b/SIstemas Operacionais/PPOS/CMakeLists.txt
@@ -6,31 +6,33 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-#test/queue_test.c
 #source/disk.c
 #source/queue.c
 #source/timer.c
 #source/signal.c
+#source/ppos_disk.c
 #source/ppos-core-aux.c
-#source/pingpong-sleep.c
-#source/pingpong-semaphore.c
-#source/pingpong-scheduler.c
-#source/pingpong-racecond.c
-#source/pingpong-prodcons.c
-#source/pingpong-preempcao-stress.c
-#source/pingpong-preempcao.c
-#source/pingpong-mqueue.c
-#source/pingpong-join.c
-#source/pingpong-disco2.c
-#source/pingpong-disco1.c
-#source/pingpong-contab-prio.c
+#test/testafila.c
+#test/pingpong-sleep.c
+#test/pingpong-semaphore.c
+#test/pingpong-scheduler.c
+#test/pingpong-racecond.c
+#test/pingpong-prodcons.c
+#test/pingpong-preempcao-stress.c
+#test/pingpong-preempcao.c
+#test/pingpong-mqueue.c
+#test/pingpong-join.c
+#test/pingpong-disco2.c
+#test/pingpong-disco1.c
+#test/pingpong-contab-prio.c
 
 # Tests:
-#P1: test/queue_test.c source/queue.c
+#P1: test/testafila.c source/queue.c
 #P2: test/pingpong-tasks1.c source/ppos-core.c | test/pingpong-tasks2.c source/ppos-core.c | test/pingpong-tasks3.c source/ppos-core.c
 #P3: test/pingpong-dispatcher.c source/ppos-core.c
+#P4: test/pingpong-scheduler.c source/ppos-core.c
 
-set(SOURCE_FILES test/pingpong-dispatcher.c source/ppos-core.c)
+set(SOURCE_FILES test/pingpong-scheduler.c source/ppos-core.c)
 
 add_executable(PPOS ${SOURCE_FILES})
 
