--- a/SIstemas Operacionais/PPOS/CMakeLists.txt
+++ b/SIstemas Operacionais/PPOS/CMakeLists.txt
@@ -11,6 +11,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #source/timer.c
 #source/signal.c
 #source/ppos_disk.c
+#source/ppos-core.c
 #source/ppos-core-aux.c
 #test/testafila.c
 #test/pingpong-sleep.c
@@ -31,8 +32,9 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #P2: test/pingpong-tasks1.c source/ppos-core.c | test/pingpong-tasks2.c source/ppos-core.c | test/pingpong-tasks3.c source/ppos-core.c
 #P3: test/pingpong-dispatcher.c source/ppos-core.c
 #P4: test/pingpong-scheduler.c source/ppos-core.c
+#P5: test/pingpong-preempcao.c source/ppos-core.c | test/pingpong-preempcao-stress.c source/ppos-core.c
 
-set(SOURCE_FILES test/pingpong-scheduler.c source/ppos-core.c)
+set(SOURCE_FILES test/pingpong-preempcao.c source/ppos-core.c)
 
 add_executable(PPOS ${SOURCE_FILES})
 
