Smart Recycler - Neural Network

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 
 SIstemas Operacionais/PPOS/build/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/__pycache__/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/test/chips_bag/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/test/juice_box/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/test/metal_can/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/test/paper_ball/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/test/plastic_bottle/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/test/plastic_cup/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/train/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/validation/
+
+Oficina de Integracao III/SmartRecycler_NeuralNetwork/models/
