Smart Recycler - Technical Report Cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,19 @@ Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/train/
 Oficina de Integracao III/SmartRecycler_NeuralNetwork/dataset/validation/
 
 Oficina de Integracao III/SmartRecycler_NeuralNetwork/models/
+
+Oficina de Integracao III/Technical Report/SmartRecycler.aux
+
+Oficina de Integracao III/Technical Report/SmartRecycler.bbl
+
+Oficina de Integracao III/Technical Report/SmartRecycler.blg
+
+Oficina de Integracao III/Technical Report/SmartRecycler.fdb_latexmk
+
+Oficina de Integracao III/Technical Report/SmartRecycler.fls
+
+Oficina de Integracao III/Technical Report/SmartRecycler.log
+
+Oficina de Integracao III/Technical Report/SmartRecycler.out
+
+Oficina de Integracao III/Technical Report/SmartRecycler.synctex.gz
