Smart Recycler - Folder Rename

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ Oficina de Integracao III/Technical Report/SmartRecycler.log
 Oficina de Integracao III/Technical Report/SmartRecycler.out
 
 Oficina de Integracao III/Technical Report/SmartRecycler.synctex.gz
+
+Oficina de Integracao III/Inference/__pycache__/
+
+Oficina de Integracao III/Inference/dataset/
+
+Oficina de Integracao III/Inference/models/
