Smart Recycler - Backend

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ Oficina de Integracao III/Inference/__pycache__/
 Oficina de Integracao III/Inference/dataset/
 
 Oficina de Integracao III/Inference/models/
+
+Oficina de Integracao III/Backend/__pycache__/
+
+Oficina de Integracao III/Backend/src/__pycache__/
