Redes de Computadores
Chat cliente - servidor

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Logica Reconfiguravel/SemaforoNet/software/SemaforoNet_bsp/HAL/
 Logica Reconfiguravel/SemaforoNet/software/SemaforoNet_bsp/drivers/
 
 Logica Reconfiguravel/SemaforoNet/software/.metadata/
+
+Redes de Computadores/ChatRoom/
