--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,15 @@ Logica Reconfiguravel/SemaforoNet/software/SemaforoNet_bsp/drivers/
 Logica Reconfiguravel/SemaforoNet/software/.metadata/
 
 Redes de Computadores/ChatRoom/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ/bin/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ/obj/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ.Consumer/bin/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ.Consumer/obj/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ.Producer/bin/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ.Producer/obj/
