Sistemas Distribuidos: RabbitMQ

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,9 @@ Sistemas Distribuidos/RabbitMQ/RabbitMQ.Consumer/obj/
 Sistemas Distribuidos/RabbitMQ/RabbitMQ.Producer/bin/
 
 Sistemas Distribuidos/RabbitMQ/RabbitMQ.Producer/obj/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ.Setup/bin/
+
+Sistemas Distribuidos/RabbitMQ/RabbitMQ.Setup/obj/
+
+Sistemas Distribuidos/RabbitMQ/Product/
