--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,15 @@ Sistemas Distribuidos/RabbitMQ/RabbitMQ.Setup/bin/
 Sistemas Distribuidos/RabbitMQ/RabbitMQ.Setup/obj/
 
 Sistemas Distribuidos/RabbitMQ/Product/
+
+Sistemas Distribuidos/RabbitMQ/Consumer/bin/
+
+Sistemas Distribuidos/RabbitMQ/Consumer/obj/
+
+Sistemas Distribuidos/RabbitMQ/Producer/bin/
+
+Sistemas Distribuidos/RabbitMQ/Producer/obj/
+
+Sistemas Distribuidos/RabbitMQ/Setup/bin/
+
+Sistemas Distribuidos/RabbitMQ/Setup/obj/
