Sistemas Distribuidos: Auction base classes

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,5 @@ Sistemas Distribuidos/RabbitMQ/Producer/obj/
 Sistemas Distribuidos/RabbitMQ/Setup/bin/
 
 Sistemas Distribuidos/RabbitMQ/Setup/obj/
+
+Sistemas Distribuidos/auction/__pycache__/
