Auction Web Service and Auction Client

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,7 @@ Sistemas Distribuidos/RabbitMQ/Setup/bin/
 Sistemas Distribuidos/RabbitMQ/Setup/obj/
 
 Sistemas Distribuidos/auction/__pycache__/
+
+Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/bin/
+
+Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/obj/
