--- a/Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/appsettings.json
+++ b/Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-19VT9CE\\SQLEXPRESS; Database=auction; User Id=ayrton; Password=ozxelq12; Trusted_Connection=true; TrustServerCertificate=true;"
+    "DefaultConnection": "Server=AYRTON\\SQLEXPRESS; Database=auction; User Id=ayrton; Password=ozxelq12; Trusted_Connection=true; TrustServerCertificate=true;"
   },
   "AppSettings": {
     "Token": "super secret key"
