Removed unnecessary folder

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ Sistemas Distribuidos/auction/__pycache__/
 Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/bin/
 
 Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/obj/
+/Sistemas Distribuidos/auction-web-service/AuctionClient/__pycache__
