--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/bi
 
 Sistemas Distribuidos/auction-web-service/AuctionWebService/AuctionWebService/obj/
 /Sistemas Distribuidos/auction-web-service/AuctionClient/__pycache__
+/Sistemas Distribuidos/auction-web-service/AuctionClient/.idea
+/Sistemas Distribuidos/auction/.idea
